style: fix brand alignment

--- a/FantasticNineWebAndAPI/src/main/resources/static/css/navbarStyles.css
+++ b/FantasticNineWebAndAPI/src/main/resources/static/css/navbarStyles.css
@@ -2,16 +2,31 @@
     background-color: #333333;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-bottom: 2px solid #514f4f;
-    padding-bottom: 0;
-    padding-top: 4px;
 }
 
 .navbar-dark .navbar-brand {
     color: #ffffff;
     font-family: 'Bebas Neue', cursive;
     font-size: 32px;
-    padding-top: 0;
 }
+
+.navbar .navbar-expand-lg .navbar-dark .bg-dark .sticky-top {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.navbar-brand {
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+    margin-right: 0;
+    height: 40px;
+}
+
+.navbar-collapse .collapse {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
 
 .navbar-dark .navbar-nav .nav-link {
     color: #ffffff;
